Conversion for capstone. Updated Customer -> Client and other changes.